src/gen/MyLanguageParser.java
// Generated from C:/Users/Lenovo/code/lp/anaSemantico/src/grammar\MyLanguage.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MyLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, WS=2, TKN_EQUALS=3, TKN_COLON=4, TKN_LEFT_PAREN=5, TKN_RIGHT_PAREN=6, 
		TKN_LEFT_BRAC=7, TKN_RIGHT_BRAC=8, OR=9, AND=10, TKN_GEQ=11, TKN_LEQ=12, 
		TKN_DIFF=13, TKN_GREATER=14, TKN_LESS=15, TKN_PLUS=16, TKN_MINUS=17, TKN_TIMES=18, 
		TKN_DIV=19, TRUE=20, FALSE=21, TKN_PERIOD=22, TKN_COMMA=23, TEXTWINDOW=24, 
		ARRAY=25, STACK=26, PROGRAM=27, IF=28, THEN=29, ENDIF=30, ELSEIF=31, ELSE=32, 
		WHILE=33, ENDWHILE=34, FOR=35, TO=36, ENDFOR=37, STEP=38, SUB=39, ENDSUB=40, 
		GOTO=41, TKN_NUMBER=42, TKN_TEXT=43, ID=44;
	public static final int
		RULE_inicio = 0, RULE_comando = 1, RULE_declarar = 2, RULE_tipo = 3, RULE_matriz = 4, 
		RULE_identificador = 5, RULE_logico1 = 6, RULE_logico1p = 7, RULE_logico2 = 8, 
		RULE_logico2p = 9, RULE_logico3 = 10, RULE_logico3p = 11, RULE_operrel = 12, 
		RULE_aritmetica1 = 13, RULE_aritmetica1p = 14, RULE_opsuma = 15, RULE_aritmetica2 = 16, 
		RULE_aritmetica2p = 17, RULE_opmultiplicar = 18, RULE_aritmetica3 = 19, 
		RULE_aritmetica4 = 20, RULE_valor = 21, RULE_integrada = 22, RULE_palabrasfuncionales = 23, 
		RULE_parametros = 24, RULE_parametrosp = 25, RULE_comandos = 26, RULE_si = 27, 
		RULE_sinosis = 28, RULE_sino = 29, RULE_mientras = 30, RULE_para = 31, 
		RULE_paso = 32, RULE_funcion = 33, RULE_ir = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "comando", "declarar", "tipo", "matriz", "identificador", "logico1", 
			"logico1p", "logico2", "logico2p", "logico3", "logico3p", "operrel", 
			"aritmetica1", "aritmetica1p", "opsuma", "aritmetica2", "aritmetica2p", 
			"opmultiplicar", "aritmetica3", "aritmetica4", "valor", "integrada", 
			"palabrasfuncionales", "parametros", "parametrosp", "comandos", "si", 
			"sinosis", "sino", "mientras", "para", "paso", "funcion", "ir"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'='", "':'", "'('", "')'", "'['", "']'", "'Or'", "'And'", 
			"'>='", "'<='", "'<>'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", null, 
			null, "'.'", "','", "'TextWindow'", "'Array'", "'Stack'", "'Program'", 
			"'If'", "'Then'", "'EndIf'", "'ElseIf'", "'Else'", "'While'", "'EndWhile'", 
			"'For'", "'To'", "'EndFor'", "'Step'", "'Sub'", "'EndSub'", "'Goto'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "WS", "TKN_EQUALS", "TKN_COLON", "TKN_LEFT_PAREN", "TKN_RIGHT_PAREN", 
			"TKN_LEFT_BRAC", "TKN_RIGHT_BRAC", "OR", "AND", "TKN_GEQ", "TKN_LEQ", 
			"TKN_DIFF", "TKN_GREATER", "TKN_LESS", "TKN_PLUS", "TKN_MINUS", "TKN_TIMES", 
			"TKN_DIV", "TRUE", "FALSE", "TKN_PERIOD", "TKN_COMMA", "TEXTWINDOW", 
			"ARRAY", "STACK", "PROGRAM", "IF", "THEN", "ENDIF", "ELSEIF", "ELSE", 
			"WHILE", "ENDWHILE", "FOR", "TO", "ENDFOR", "STEP", "SUB", "ENDSUB", 
			"GOTO", "TKN_NUMBER", "TKN_TEXT", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXTWINDOW:
			case ARRAY:
			case STACK:
			case PROGRAM:
			case IF:
			case WHILE:
			case FOR:
			case GOTO:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(70);
					comando();
					}
					}
					setState(73); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 19834679066624L) != 0) );
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SUB) {
					{
					{
					setState(75);
					funcion();
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case SUB:
				enterOuterAlt(_localctx, 2);
				{
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(81);
					funcion();
					}
					}
					setState(84); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SUB );
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 19834679066624L) != 0)) {
					{
					{
					setState(86);
					comando();
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public DeclararContext declarar() {
			return getRuleContext(DeclararContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public IntegradaContext integrada() {
			return getRuleContext(IntegradaContext.class,0);
		}
		public IrContext ir() {
			return getRuleContext(IrContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comando);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				declarar();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				si();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				mientras();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				para();
				}
				break;
			case TEXTWINDOW:
			case ARRAY:
			case STACK:
			case PROGRAM:
				enterOuterAlt(_localctx, 5);
				{
				setState(99);
				integrada();
				}
				break;
			case GOTO:
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				ir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclararContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MyLanguageParser.ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DeclararContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterDeclarar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitDeclarar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitDeclarar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararContext declarar() throws RecognitionException {
		DeclararContext _localctx = new DeclararContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(ID);
			setState(104);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode TKN_EQUALS() { return getToken(MyLanguageParser.TKN_EQUALS, 0); }
		public Aritmetica1Context aritmetica1() {
			return getRuleContext(Aritmetica1Context.class,0);
		}
		public List<MatrizContext> matriz() {
			return getRuleContexts(MatrizContext.class);
		}
		public MatrizContext matriz(int i) {
			return getRuleContext(MatrizContext.class,i);
		}
		public TerminalNode TKN_COLON() { return getToken(MyLanguageParser.TKN_COLON, 0); }
		public TerminalNode TKN_LEFT_PAREN() { return getToken(MyLanguageParser.TKN_LEFT_PAREN, 0); }
		public TerminalNode TKN_RIGHT_PAREN() { return getToken(MyLanguageParser.TKN_RIGHT_PAREN, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo);
		int _la;
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TKN_EQUALS:
			case TKN_LEFT_BRAC:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TKN_LEFT_BRAC) {
					{
					{
					setState(106);
					matriz();
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(112);
				match(TKN_EQUALS);
				setState(113);
				aritmetica1();
				}
				break;
			case TKN_COLON:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(TKN_COLON);
				}
				break;
			case TKN_LEFT_PAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				match(TKN_LEFT_PAREN);
				setState(116);
				match(TKN_RIGHT_PAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatrizContext extends ParserRuleContext {
		public TerminalNode TKN_LEFT_BRAC() { return getToken(MyLanguageParser.TKN_LEFT_BRAC, 0); }
		public Logico1Context logico1() {
			return getRuleContext(Logico1Context.class,0);
		}
		public TerminalNode TKN_RIGHT_BRAC() { return getToken(MyLanguageParser.TKN_RIGHT_BRAC, 0); }
		public MatrizContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matriz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterMatriz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitMatriz(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitMatriz(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatrizContext matriz() throws RecognitionException {
		MatrizContext _localctx = new MatrizContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matriz);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(TKN_LEFT_BRAC);
			setState(120);
			logico1();
			setState(121);
			match(TKN_RIGHT_BRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentificadorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MyLanguageParser.ID, 0); }
		public List<MatrizContext> matriz() {
			return getRuleContexts(MatrizContext.class);
		}
		public MatrizContext matriz(int i) {
			return getRuleContext(MatrizContext.class,i);
		}
		public IdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitIdentificador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitIdentificador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentificadorContext identificador() throws RecognitionException {
		IdentificadorContext _localctx = new IdentificadorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identificador);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(ID);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TKN_LEFT_BRAC) {
				{
				{
				setState(124);
				matriz();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logico1Context extends ParserRuleContext {
		public Logico2Context logico2() {
			return getRuleContext(Logico2Context.class,0);
		}
		public Logico1pContext logico1p() {
			return getRuleContext(Logico1pContext.class,0);
		}
		public Logico1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logico1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterLogico1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitLogico1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitLogico1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logico1Context logico1() throws RecognitionException {
		Logico1Context _localctx = new Logico1Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_logico1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			logico2();
			setState(131);
			logico1p();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logico1pContext extends ParserRuleContext {
		public TerminalNode OR() { return getToken(MyLanguageParser.OR, 0); }
		public Logico2Context logico2() {
			return getRuleContext(Logico2Context.class,0);
		}
		public Logico1pContext logico1p() {
			return getRuleContext(Logico1pContext.class,0);
		}
		public Logico1pContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logico1p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterLogico1p(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitLogico1p(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitLogico1p(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logico1pContext logico1p() throws RecognitionException {
		Logico1pContext _localctx = new Logico1pContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logico1p);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OR:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(OR);
				setState(134);
				logico2();
				setState(135);
				logico1p();
				}
				break;
			case TKN_RIGHT_PAREN:
			case TKN_RIGHT_BRAC:
			case TKN_COMMA:
			case TEXTWINDOW:
			case ARRAY:
			case STACK:
			case PROGRAM:
			case IF:
			case WHILE:
			case FOR:
			case TO:
			case ENDFOR:
			case STEP:
			case GOTO:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logico2Context extends ParserRuleContext {
		public Logico3Context logico3() {
			return getRuleContext(Logico3Context.class,0);
		}
		public Logico2pContext logico2p() {
			return getRuleContext(Logico2pContext.class,0);
		}
		public Logico2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logico2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterLogico2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitLogico2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitLogico2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logico2Context logico2() throws RecognitionException {
		Logico2Context _localctx = new Logico2Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_logico2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			logico3();
			setState(141);
			logico2p();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logico2pContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(MyLanguageParser.AND, 0); }
		public Logico3Context logico3() {
			return getRuleContext(Logico3Context.class,0);
		}
		public Logico2pContext logico2p() {
			return getRuleContext(Logico2pContext.class,0);
		}
		public Logico2pContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logico2p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterLogico2p(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitLogico2p(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitLogico2p(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logico2pContext logico2p() throws RecognitionException {
		Logico2pContext _localctx = new Logico2pContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_logico2p);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AND:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				match(AND);
				setState(144);
				logico3();
				setState(145);
				logico2p();
				}
				break;
			case TKN_RIGHT_PAREN:
			case TKN_RIGHT_BRAC:
			case OR:
			case TKN_COMMA:
			case TEXTWINDOW:
			case ARRAY:
			case STACK:
			case PROGRAM:
			case IF:
			case WHILE:
			case FOR:
			case TO:
			case ENDFOR:
			case STEP:
			case GOTO:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logico3Context extends ParserRuleContext {
		public Aritmetica1Context aritmetica1() {
			return getRuleContext(Aritmetica1Context.class,0);
		}
		public Logico3pContext logico3p() {
			return getRuleContext(Logico3pContext.class,0);
		}
		public Logico3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logico3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).enterLogico3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageListener ) ((MyLanguageListener)listener).exitLogico3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyLanguageVisitor ) return ((MyLanguageVisitor<? extends T>)visitor).visitLogico3(this);
			else return visitor.visitChildren(this);
		}
	}
